--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+polars = { version = "0.38", default-features = false, features = ["csv", "fmt"] }
 serde_json = "1.0"
